--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,4 +38,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: maven-artifacts
+          path: target
           path: target/
