--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven Build
+name: Java CI with Maven Build and S3 Deployment
 
 on:
   push:
@@ -39,3 +39,23 @@ jobs:
         with:
           name: maven-artifacts
           path: target
+
+  Deploy-to-S3:
+    needs: Review-code-and-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Maven artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: maven-artifacts
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: <Sydney>
+
+      - name: Upload artifact to S3
+        run: aws s3 cp ./target/<maven-artifacts>.jar s3://<devtest-deployment>/<maven-artifacts>.jar
+
