--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   Review-code-and-build:
-
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -54,8 +52,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: <Sydney>
+          aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
         run: aws s3 cp ./target/<maven-artifacts>.jar s3://<devtest-deployment>/<maven-artifacts>.jar
-
