--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,4 +55,4 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
-        run: aws s3 cp ./target/<maven-artifacts>.jar s3://<devtest-deployment>/<maven-artifacts>.jar
+        run: aws s3 cp ./target/maven-artifacts.jar s3://devtest-deployment/maven-artifacts.jar
