--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   Review-code-and-build:
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,12 +34,6 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Upload Maven artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: maven-artifacts
-          path: target
-
   Deploy-to-S3:
     needs: Review-code-and-build
     runs-on: ubuntu-latest
@@ -55,4 +51,4 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
-        run: aws s3 cp ./target/maven-artifacts.jar s3://devtest-deployment/maven-artifacts.jar
+        run: aws s3 cp ./maven-artifacts.jar s3://devtest-deployment/maven-artifacts.jar
