--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,4 +47,4 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
-        run: aws s3 cp ./maven-artifacts.jar s3://devtest-deployment/maven-artifacts.jar
+        run: aws s3 cp ./mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/mb2g-spring-boot-0.0.1-SNAPSHOT.jar
