--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   Review-code-and-build:
-
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -34,10 +32,23 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - name: Upload Maven artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: maven-artifacts
+          path: target
+
   Deploy-to-S3:
     needs: Review-code-and-build
     runs-on: ubuntu-latest
     steps:
+      - name: Download Maven artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: maven-artifacts
+          
+      - name: Set JAR file name
+        run: echo "JAR_FILE=$(ls ${{ github.workspace }}/target/*.jar)" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -47,4 +58,4 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
-        run: aws s3 cp ./target/mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/mb2g-spring-boot-0.0.1-SNAPSHOT.jar
+        run: aws s3 cp $JAR_FILE s3://devtest-deployment/
