--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,10 @@
----
 name: Java CI with Maven Build and S3 Deployment
 
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    branches: ["master"]
+    branches: [ "master" ]
 
 jobs:
   Review-code-and-build:
@@ -22,7 +21,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: "master"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+   
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -48,9 +47,6 @@ jobs:
         with:
           name: maven-artifacts
 
-      - name: Set JAR file name
-        run: echo "JAR_FILE=$(ls ${{ github.workspace }}/target/*.jar)" >> $GITHUB_ENV
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -59,4 +55,4 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Upload artifact to S3
-        run: aws s3 cp $JAR_FILE s3://devtest-deployment/
+        run: aws s3 cp ./target/application.jar s3://devtest-deployment/application.jar
