--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Upload artifact to S3
         run: aws s3 cp /home/runner/work/spring-simple-maven/spring-simple-maven/mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/maven-artifacts.jar
 
-  Deploy-to-EC2:
+    Deploy-to-EC2:
     needs: Deploy-to-S3
     runs-on: ubuntu-latest
     steps:
@@ -70,7 +70,4 @@ jobs:
         run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} /home/runner/work/spring-simple-maven/spring-simple-maven/mb2g-spring-boot-0.0.1-SNAPSHOT.jar ec2-user@13.211.202.84:
 
       - name: Deploy artifact on EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@13.211.202.84 'sudo systemctl stop your_service_name \
-          && sudo cp ~/mb2g-spring-boot-0.0.1-SNAPSHOT.jar \
-          && sudo systemctl start your_service_name'
+        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@13.211.202.84
