--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,7 +67,7 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Download artifact from S3
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/runner/maven-artifacts.jar --debug
+        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/runner/maven-artifacts.jar
 
 
       - name: Copy artifact to EC2
