--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Upload artifact to S3
         run: aws s3 cp /home/runner/work/spring-simple-maven/spring-simple-maven/mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/maven-artifacts.jar
 
+     
   Deploy-to-EC2:
     needs: Deploy-to-S3
     runs-on: ubuntu-latest
@@ -67,11 +68,17 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Download artifact from S3
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/runner/maven-artifacts.jar
+        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar ./maven-artifacts.jar
 
+      - name: Copy artifact to EC2 instance
+        run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@13.211.202.84:/deploy
 
-      - name: Copy artifact to EC2
-        run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} /home/runner/maven-artifacts.jar ec2-user@13.211.202.84
+      - name: Create application directory if not exists
+        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "mkdir -p /path"
 
-      - name: Deploy artifact on EC2
-        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@13.211.202.84
+      - name: Deploy artifact to application directory
+        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "sudo cp /deploy/maven-artifacts.jar /path/to/your/application/directory/"
+
+      - name: Restart or reload application
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@13.211.202.84 "sudo systemctl restart your-application.service"
