--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,8 +67,8 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Download artifact from S3
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar ./maven-artifacts.jar
+      - name: Download artifact from S3 using curl
+        run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
 
       - name: Copy artifact to EC2 instance
         run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@13.211.202.84:/deploy
