--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,7 +71,7 @@ jobs:
         run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
 
       - name: Copy artifact to EC2 instance
-        run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@13.211.202.84:/deploy
+        run: aws s3 cp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@13.211.202.84:/deploy
 
       - name: Create application directory if not exists
         run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "mkdir -p /path"
