--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,11 +71,11 @@ jobs:
         run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
 
       - name: Copy artifact to EC2 instance
-        run: aws s3 cp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@13.211.202.84:/deploy
+        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /deploy/maven-artifacts.jar
 
       - name: Create application directory if not exists
         run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "mkdir -p /path"
-
+ 
       - name: Deploy artifact to application directory
         run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "sudo cp /deploy/maven-artifacts.jar /path/to/your/application/directory/"
 
