--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,13 +72,6 @@ jobs:
 
       - name: Copy artifact to EC2 instance
         run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /deploy/maven-artifacts.jar
-
-      - name: Create application directory if not exists
-        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "mkdir -p /path"
- 
-      - name: Deploy artifact to application directory
-        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "sudo cp /deploy/maven-artifacts.jar /path/to/your/application/directory/"
-
-      - name: Restart or reload application
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@13.211.202.84 "sudo systemctl restart your-application.service"
+       
+      - name: SSH into EC2 instance and run JAR
+        run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@3.107.67.245 "java -jar /deploy/maven-artifacts.jar"
