--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,7 +71,7 @@ jobs:
         run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
 
       - name: Copy artifact to EC2 instance
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar ec2-user@54.252.251.169:deploy/
+        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar ec2-user@ip-172-31-37-31.ap-southeast-2.compute.internal:deploy
 
 
       - name: SSH into EC2 instance and run JAR
