--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,7 +72,7 @@ jobs:
 
       
       - name: Copy artifact to EC2 instance
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/
+        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/ --debug
 
       - name: SSH into EC2 instance and run JAR
         run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.252.251.169 "java -jar /deploy/maven-artifacts.jar"
