--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,8 +71,8 @@ jobs:
         run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
 
       
+      
       - name: Copy artifact to EC2 instance
-        run: aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/ --debug
-
+        run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ./maven-artifacts.jar ec2-user@54.252.251.169:/home/ec2-user/deploy/
       - name: SSH into EC2 instance and run JAR
         run: ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.252.251.169 "java -jar /deploy/maven-artifacts.jar"
