--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,11 +67,6 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Download artifact from S3 using curl
-        run: curl -o maven-artifacts.jar https://devtest-deployment.s3.amazonaws.com/maven-artifacts.jar
-
       - name: SSH into EC2 instance and copy artifact
         run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.252.251.169 << EOF
-            aws s3 cp s3://devtest-deployment/maven-artifacts.jar deploy/
-          EOF
+          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.252.251.169 'aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/'
