--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -69,4 +69,4 @@ jobs:
 
       - name: SSH into EC2 instance and copy artifact
         run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.252.251.169 'aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/'
+         ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@ip-172-31-37-31.ap-southeast-2.compute.internal 'aws s3 cp s3://devtest-deployment/maven-artifacts.jar /home/ec2-user/deploy/'
