--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: my-stack
-          template: s3://cfdeployment/Instanceparam.json
+          template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
           capabilities: CAPABILITY_NAMED_IAM
           parameter-overrides: |
             InstanceType=t2.micro
