--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Deploy CloudFormation Stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: my-stack
-          template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
-          capabilities: CAPABILITY_NAMED_IAM
-          parameter-overrides: |
-            InstanceType=t2.micro
-            KeyNameParam=deploy.pem
-            ArtifactBucket=devtest-deployment
-            ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
+         name: my-stack
+         template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
+         capabilities: CAPABILITY_NAMED_IAM
+         parameter-overrides: |
+           InstanceType=t2.micro
+           KeyNameParam=${{ secrets.MY_SECRET_VALUE }}
+           ArtifactBucket=devtest-deployment
+           ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
