--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
          capabilities: CAPABILITY_NAMED_IAM
          parameter-overrides: |
            ArtifactBucket=devtest-deployment
-           ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
+           ArtifactKey="https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
            InstanceType=t2.micro
-           KeyNameParam=deploy
+           KeyNameParam=${{ secrets.SSH_PRIVATE_KEY }}
