--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
          template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
          capabilities: CAPABILITY_NAMED_IAM
          parameter-overrides: |
-           ArtifactBucket=devtest-deployment
-           ArtifactKey="https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
-           InstanceType=t2.micro
-           KeyNameParam=${{ secrets.SSH_PRIVATE_KEY }}
+          ArtifactBucket=devtest-deployment
+          ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
+          InstanceType=t2.micro
+          KeyNameParam=deploy
