--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,7 +46,7 @@ jobs:
         run: ls -R 
 
       - name: Upload artifact to S3
-        run: aws s3 cp /home/runner/work/spring-simple-maven/spring-simple-maven/mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/maven-artifacts.jar
+        run: aws s3 cp /mb2g-spring-boot-0.0.1-SNAPSHOT.jar s3://devtest-deployment/maven-artifacts.jar
 
       - name: Upload CF Script to S3
         run: aws s3 cp /home/runner/work/spring-simple-maven/spring-simple-maven/cicd/Instanceparam.json s3://cfdeployment/
