--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - name: Test
+        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+
       - name: Upload Maven artifacts
         uses: actions/upload-artifact@v2
         with:
