--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,11 +48,11 @@ jobs:
       - name: List contents of the directory
         run: ls -R 
 
-      - name: Upload artifact to S3
-        run: aws s3 cp ./target/mb2g-spring-boot-0.0.1-SNASHOT.jar s3://devtest-deployment/maven-artifacts.jar
+   #   - name: Upload artifact to S3
+    #    run: aws s3 cp ./target/mb2g-spring-boot-0.0.1-SNASHOT.jar s3://devtest-deployment/maven-artifacts.jar
 
-      - name: Upload CF Script to S3
-        run: aws s3 cp ./cicd/Instanceparam.json s3://cfdeployment/
+    #  - name: Upload CF Script to S3
+     #   run: aws s3 cp ./cicd/Instanceparam.json s3://cfdeployment/
   Review-PR:
      runs-on: ubuntu-latest
      needs: Review-code-and-build
