--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,26 +48,8 @@ jobs:
       - name: List contents of the directory
         run: ls -R 
 
-   #   - name: Upload artifact to S3
-    #    run: aws s3 cp ./target/mb2g-spring-boot-0.0.1-SNASHOT.jar s3://devtest-deployment/maven-artifacts.jar
+      - name: Upload artifact to S3
+        run: aws s3 cp ./target/mb2g-spring-boot-0.0.1-SNASHOT.jar s3://devtest-deployment/maven-artifacts.jar
 
-    #  - name: Upload CF Script to S3
-     #   run: aws s3 cp ./cicd/Instanceparam.json s3://cfdeployment/
-  Review-PR:
-     runs-on: ubuntu-latest
-     needs: Review-code-and-build
-     if: github.event_name == 'pull_request'
-     steps:
-      - name: Check if unit tests passed
-        run: |
-          if [ "${{ job.status }}" == "success" ]; then
-            echo "Unit tests passed, approving PR."
-            # Approve PR
-            gh pr review --approve
-          else
-            echo "Unit tests failed, stopping PR."
-            # Stop PR
-            gh pr review --reject
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload CF Script to S3
+        run: aws s3 cp ./cicd/Instanceparam.json s3://cfdeployment/
