--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,7 @@ jobs:
          capabilities: CAPABILITY_NAMED_IAM
          parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
 
+      - name: Wait for CloudFormation Stack to Complete
+        uses: aws-actions/aws-cloudformation-wait-for-stack@v1
+        with:
+          stack-name: my-stack
