--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,55 @@ jobs:
          capabilities: CAPABILITY_NAMED_IAM
          parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
 
-      - name: Wait for CloudFormation Stack to Complete
-        uses: aws-actions/aws-cloudformation-wait-for-stack@v2
+      name: CloudFormation Deployment
+
+on:
+  workflow_run:
+    workflows: ["Java CI with Maven Build and S3 Deployment"]
+    types:
+      - completed
+
+jobs:
+  deploy-cf-stack:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          stack-name: my-stack
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-2
+
+      - name: Deploy CloudFormation Stack
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+         name: my-stack
+         template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
+         capabilities: CAPABILITY_NAMED_IAM
+         parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
+
+      - name: Wait for CloudFormation Stack to Complete
+        run: |
+          stack_name=my-stack
+          region=ap-southeast-2
+
+          while true; do
+            stack_status=$(aws cloudformation describe-stacks --stack-name $stack_name --region $region --query "Stacks[0].StackStatus" --output text)
+
+            echo "Current stack status: $stack_status"
+
+            if [[ "$stack_status" == "CREATE_COMPLETE" || "$stack_status" == "UPDATE_COMPLETE" ]]; then
+              echo "Stack operation completed successfully."
+              break
+            elif [[ "$stack_status" == "CREATE_FAILED" || "$stack_status" == "ROLLBACK_COMPLETE" || "$stack_status" == "DELETE_FAILED" ]]; then
+              echo "Stack operation failed with status: $stack_status"
+              exit 1
+            else
+              echo "Waiting for stack operation to complete..."
+              sleep 30
+            fi
+          done
+      
