--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,40 +23,14 @@ jobs:
       - name: Deploy CloudFormation Stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-         name: my-stack
-         template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
-         capabilities: CAPABILITY_NAMED_IAM
-         parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
-
-      name: CloudFormation Deployment
-
-on:
-  workflow_run:
-    workflows: ["Java CI with Maven Build and S3 Deployment"]
-    types:
-      - completed
-
-jobs:
-  deploy-cf-stack:
-    runs-on: self-hosted
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-2
-
-      - name: Deploy CloudFormation Stack
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-         name: my-stack
-         template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
-         capabilities: CAPABILITY_NAMED_IAM
-         parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
+          name: my-stack
+          template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
+          capabilities: CAPABILITY_NAMED_IAM
+          parameter-overrides: |
+            InstanceType=t2.micro
+            KeyNameParam=deploy
+            ArtifactBucket=devtest-deployment
+            ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
 
       - name: Wait for CloudFormation Stack to Complete
         run: |
@@ -79,4 +53,3 @@ jobs:
               sleep 30
             fi
           done
-      
