--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
     types:
       - completed
 
+
 jobs:
   deploy-cf-stack:
     runs-on: self-hosted
@@ -23,15 +24,10 @@ jobs:
       - name: Deploy CloudFormation Stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: my-stack
-          template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
-          capabilities: CAPABILITY_NAMED_IAM
-          parameter-overrides: |
-            InstanceType=t2.micro
-            KeyNameParam=deploy
-            ArtifactBucket=devtest-deployment
-            ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar
-
+         name: my-stack
+         template: https://cfdeployment.s3.ap-southeast-2.amazonaws.com/Instanceparam.json
+         capabilities: CAPABILITY_NAMED_IAM
+         parameter-overrides: "InstanceType=t2.micro,KeyNameParam=deploy,ArtifactBucket=devtest-deployment,ArtifactKey=https://devtest-deployment.s3.ap-southeast-2.amazonaws.com/maven-artifacts.jar"
       - name: Wait for CloudFormation Stack to Complete
         run: |
           stack_name=my-stack
