--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,3 +53,12 @@ jobs:
 
       - name: Upload CF Script to S3
         run: aws s3 cp ./cicd/Instanceparam.json s3://cfdeployment/
+
+      - name: Notify Slack of Job Status
+        if: always()
+        uses: rtCamp/action-slack-notify@v2.1.0
+        with:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          status: ${{ job.status }}
+        env:
+          CI: true
