--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,4 +61,4 @@ jobs:
           status: ${{ job.status }}
           fields: repo,commit,author
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
